[package]
name = "evencheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellpepper-core = "0.2.1"
nova-snark = "0.24.0"
ff = { version = "0.13.0", features = ["derive"] }
pasta_curves = "0.5.1"
flate2 = "1.0.27"
hex = "0.4.3"
bincode = "1.3.3"
num-bigint = "0.4.4"
